loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
while(sortieTrouvee==false){
^Poucet2:7: error: ';' expected but 'while' found.
  }while (crossing()) 
   ^Poucet2:16: error: 'while' expected but '}' found.
	}
        ^